--- a/package.json
+++ b/package.json
@@ -5,11 +5,42 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)\""
   },
   "dependencies": {
+    "@zeit/next-less": "^1.0.1",
+    "less": "^3.12.2",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "rsuite": "^4.8.2"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "eslint": "^7.10.0",
+    "eslint-config-like": "^1.5.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
+  },
+  "lint-staged": {
+    "src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)": [
+      "npm run format"
+    ],
+    "src/**/*.{ts,tsx}": [
+      "npm run lint:tsx"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
