--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
+    "css-loader": "^4.3.0",
     "less": "^3.12.2",
     "next": "9.5.3",
     "react": "16.13.1",
