--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "@zeit/next-css": "^1.0.1",
     "eslint": "^7.10.0",
     "eslint-config-like": "^1.5.0",
     "husky": "^4.3.0",
