--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   },
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
+    "cookie": "^0.4.1",
     "css-loader": "^4.3.0",
+    "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "rsuite": "^4.8.2"
+    "rsuite": "^4.8.2",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/cookie": "^0.4.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@zeit/next-css": "^1.0.1",
