--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "jsx": "preserve",
       "baseUrl": "."
     },
-    "include": ["src", "next-env.d.ts"],
+    "include": ["src", "next-env.d.ts", "utils"],
     "exclude": ["node_modules"]
   }
   
